<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IANL</string>
    <string name="hello_world">Hello world!</string>

    <!-- Action bar item strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Activity headers and title strings -->
    <string name="masjid_news_banner_heading">Masjid news</string>
    <string name="about_heading">About</string>
    <string name="podcast_main_heading">Podcasts</string>

    <!-- Prayer times and widget related strings -->
    <string name="prayer_timetable_widget_label">IANL Daily Prayer Times</string>
    <string name="mosque_prayer_timetable">IANL</string>
    <string name="prayer_heading_tag">Prayer</string>
    <string name="start_time_heading_tag">Start</string>
    <string name="jamaa_heading_tag">Jama\'ah</string>
    <string name="fajr_label">Fajr</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="dhuhr_label">Dhuhr</string>
    <string name="asr_label">Asr</string>
    <string name="maghrib_label">Maghrib</string>
    <string name="isha_label">Ishaa\'</string>
    <string name="todays_prayer_times_url_feed">http://ianl.org.uk/prayertimes.xml</string>
    <string name="xml_prayertimetable_tag">PrayerTimetable</string>
    <string name="xml_day_tag">Day</string>
    <string name="xml_date_tag">Date</string>
    <string name="xml_fajr_start_tag">FajrStart</string>
    <string name="xml_fajr_jamaa_tag">FajrJamaat</string>
    <string name="xml_sunrise_tag">Shrooq</string>
    <string name="xml_dhuhr_start_tag">DhuhrStart</string>
    <string name="xml_dhuhr_jamaa_tag">DhuhrJamaat</string>
    <string name="xml_asr_start_tag">AsrStart</string>
    <string name="xml_asr_jamaa_tag">AsrJamaat</string>
    <string name="xml_maghrib_start_tag">MaghribStart</string>
    <string name="xml_maghrib_jamaa_tag">MaghribJamaat</string>
    <string name="xml_isha_start_tag">IshaaStart</string>
    <string name="xml_isha_jamaa_tag">IshaaJamaat</string>

    <!-- Podcast related strings -->
    <string name="podcast_url_feed"><![CDATA[http://ianl.org.uk/component/podcastmanager/?format=raw&feedname=1]]></string>
    <string name="podcast_title_tag">title</string>
    <string name="podcast_author_tag">itunes:author</string>
    <string name="podcast_url_tag">guid</string>
    <string name="podcast_duration_tag">itunes:duration</string>
    <string name="title_activity_news_web_view">News</string>

</resources>