<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_shape"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="2dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/mosque_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:lines="1"
            android:text="@string/mosque_prayer_timetable" />

        <TextView
            android:id="@+id/todays_prayer_times_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:lines="1"
            android:text="DATE" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headings_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/prayer_header_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/prayer_heading_tag" />

        <TextView
            android:id="@+id/start_header_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/start_time_heading_tag" />

        <TextView
            android:id="@+id/jamaa_header_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/jamaa_heading_tag" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fajr_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/fajr_title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/fajr_label" />

        <TextView
            android:id="@+id/fajr_start_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="1:00" />

        <TextView
            android:id="@+id/fajr_jamaa_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="2:00" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sunrise_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/sunrise_title_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_weight="1"
	        android:text="@string/sunrise_label" />
	
	    <TextView
	        android:id="@+id/sunrise_start_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="1:00" />
	
	    <TextView
	        android:id="@+id/sunrise_jamaa_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="" />
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/dhuhr_linearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/dhuhr_title_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_weight="1"
	        android:text="@string/dhuhr_label" />
	
	    <TextView
	        android:id="@+id/dhuhr_start_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="1:00" />
	
	    <TextView
	        android:id="@+id/dhuhr_jamaa_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="2:00" />	
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/asr_linearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/asr_title_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_weight="1"
	        android:text="@string/asr_label" />
	
	    <TextView
	        android:id="@+id/asr_start_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="1:00" />
	
	    <TextView
	        android:id="@+id/asr_jamaa_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="2:00" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/maghrib_linearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/maghrib_title_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_weight="1"
	        android:text="@string/maghrib_label" />
	
	    <TextView
	        android:id="@+id/maghrib_start_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="1:00" />
	
	    <TextView
	        android:id="@+id/maghrib_jamaa_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="2:00" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/isha_linearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/isha_title_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_weight="1"
	        android:text="@string/isha_label" />
	
	    <TextView
	        android:id="@+id/isha_start_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="1:00" />
	
	    <TextView
	        android:id="@+id/isha_jamaa_textView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="2:00" />
	</LinearLayout>

</LinearLayout>